@@ -8,7 +8,7 @@
 include ../../config.mk
 
 # List of executables
-EXECUTABLES=single_cell platonic random_points import
+EXECUTABLES=single_cell platonic random_points import rad_test
 
 # Makefile rules
 all: $(EXECUTABLES)
@@ -21,6 +21,9 @@ platonic: platonic.cc
 
 random_points: random_points.cc
 	$(CXX) $(CFLAGS) $(E_INC) $(E_LIB) -o random_points random_points.cc -lvoro++
+
+rad_test: rad_test.cc
+	$(CXX) $(CFLAGS) $(E_INC) $(E_LIB) -o rad_test rad_test.cc -lvoro++
 
 import: import.cc
 	$(CXX) $(CFLAGS) $(E_INC) $(E_LIB) -o import import.cc -lvoro++
